A patch from Budianto Lie for "Calendar icon cropped" https://issues.apache.org/jira/browse/OFBIZ-5036
Calendar icon showed cropped in the right side. In theme droppingcrumbs, bluelight, bizznesstime using (at least) Chrome, FF and IE8 were OK.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1387076 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
@@ -2655,6 +2655,7 @@ border: none;
 vertical-align:center;
 margin-top:3px;
 margin-left: 6px;
+width:22px;
 height:22px;
 }
 
